--- a/arch/arm/configs/superosr-chacha_defconfig
+++ b/arch/arm/configs/superosr-chacha_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.13
-# Thu Feb  9 16:17:28 2012
+# Tue Apr 17 00:30:58 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -78,7 +78,7 @@ CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_SYSFS_DEPRECATED_V2 is not set
-# CONFIG_RELAY is not set
+CONFIG_RELAY=y
 # CONFIG_NAMESPACES is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
@@ -684,6 +684,9 @@ CONFIG_NETFILTER_XT_MATCH_OWNER=y
 CONFIG_NETFILTER_XT_MATCH_POLICY=y
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
+CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
+CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
+# CONFIG_NETFILTER_XT_MATCH_QTAGUID is not set
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 # CONFIG_NETFILTER_XT_MATCH_RECENT is not set
@@ -888,6 +891,8 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
+CONFIG_GENLOCK=y
+CONFIG_GENLOCK_MISCDEVICE=y
 # CONFIG_CONNECTOR is not set
 CONFIG_MTD=y
 # CONFIG_MTD_DEBUG is not set
@@ -1406,6 +1411,18 @@ CONFIG_MT9V113=y
 #
 # Graphics support
 #
+CONFIG_MSM_KGSL=y
+# CONFIG_MSM_KGSL_CFF_DUMP is not set
+# CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
+# CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
+# CONFIG_MSM_KGSL_PSTMRTMDMP_RB_HEX is not set
+# CONFIG_MSM_KGSL_2D is not set
+CONFIG_MSM_KGSL_MMU=y
+CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
+CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
+CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=8
+# CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
+# CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
@@ -1439,14 +1456,6 @@ CONFIG_FB_MSM=y
 CONFIG_FB_MSM_LEGACY_MDP=y
 CONFIG_FB_MSM_MDP_PPP=y
 CONFIG_FB_MSM_LCDC=y
-CONFIG_GPU_MSM_KGSL=y
-# CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
-# CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
-# CONFIG_MSM_KGSL_PSTMRTMDMP_RB_HEX is not set
-# CONFIG_MSM_KGSL_PSTMRTMDMP_NO_REG_DUMP is not set
-CONFIG_MSM_KGSL_MMU=y
-# CONFIG_MSM_KGSL_PER_FD_PAGETABLE is not set
-# CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 
 #
@@ -1527,6 +1536,8 @@ CONFIG_USB_ANDROID_MASS_STORAGE=y
 CONFIG_USB_ANDROID_RNDIS=y
 CONFIG_USB_ANDROID_RNDIS_WCEIS=y
 CONFIG_USB_ANDROID_ACCESSORY=y
+CONFIG_USB_ANDROID_SERIAL=y
+CONFIG_USB_ANDROID_ECM=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_NOKIA is not set
 # CONFIG_USB_G_MULTI is not set
